src/objects/Customer_Contact__c.object
<CustomObject>
    <description>Customer Contact - defines a relationship between Hub Customer and Hub Contacts.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact</description>
        <inlineHelpText>Contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Hub_Contact__c</referenceTo>
        <relationshipName>Customer_and_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>Customer</description>
        <inlineHelpText>Customer</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>GCM Contacts</relationshipLabel>
        <relationshipName>Customer_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Role Region</description>
        <inlineHelpText>Role Region</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Role__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>AM - AMEC</fullName>
                </value>
                <value>
                    <fullName>EU - EMEA</fullName>
                </value>
                <value>
                    <fullName>AP - GC</fullName>
                </value>
                <value>
                    <fullName>AP - JAPAN</fullName>
                </value>
                <value>
                    <fullName>AP - KOREA</fullName>
                </value>
                <value>
                    <fullName>AP - SAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role</description>
        <inlineHelpText>Role</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Account Service Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer GCM Contact</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer_Contact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CustomerContact_RegionMandatory</fullName>
        <active>true</active>
        <description>Region is mandatory to define a Customer Contact</description>
        <errorConditionFormula>ISPICKVAL (  Region__c  ,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Region__c</errorDisplayField>
        <errorMessage>Region is mandatory to define a Customer Contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CustomerContact_RoleMandatory</fullName>
        <active>true</active>
        <description>Role is mandatory to define a Customer Contact</description>
        <errorConditionFormula>ISPICKVAL (  Role__c ,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>Role is mandatory to define a Customer Contact</errorMessage>
    </validationRules>
</CustomObject>